# radio-timetable

./: .gitignore  main.py  pyproject.toml  radio_timetable.py  renderer.py  scraper.py
server/: __init__.py  index.html  main.py
server/css/: index.css
server/js/: index.js
