[tool.poetry]
name = "radio"
version = "0.1.0"
description = ""
authors = ["Isami Yuma <lemonburst1958@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests-html = "^0.10.0"
flake8 = "^3.9.0"
black = "^20.8b1"
dataclasses-json = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
